[package]
name = "kvv-efa-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust bindings for the KVV (Karlsruher Verkehrs Verbund) \"EFA\"-API"
readme = "README.md"
repository = "https://github.com/spydr06/kvv-api-rs"
keywords = ["kvv", "api", "trains", "Bahn", "Germany", "Karlsruhe"]
categories = ["api-bindings", "data-structures"]

[[example]]
name = "basic"
crate-type = ["bin"]

[features]
reqwest = ["dep:reqwest"]

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
serde-aux = "4.4.0"
reqwest = { version = "0.11.23", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1.20.x", features = ["full"] }
colored = "2.1.0"
